cacti-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cacti
spec:
  selector:
    app: cacti
  ports:
  - protoccol: TCP
    port: 80
    targetPort: 80
